# fprime-zephyr

./: .gitignore  README.md  fprime-zephyr.cmake  pyproject.toml
.github/actions/setup/: action.yml
.github/workflows/: allocator-verification.yml
Zephyr/Drv/ZephyrGpioDriver/: CMakeLists.txt  ZephyrGpioDriver.cpp  ZephyrGpioDriver.fpp  ZephyrGpioDriver.hpp
Zephyr/Drv/ZephyrGpioDriver/docs/: sdd.md
Zephyr/Drv/ZephyrRateDriver/: CMakeLists.txt  ZephyrRateDriver.cpp  ZephyrRateDriver.fpp  ZephyrRateDriver.hpp
Zephyr/Drv/ZephyrUartDriver/: CMakeLists.txt  ZephyrUartDriver.cpp  ZephyrUartDriver.fpp  ZephyrUartDriver.hpp
Zephyr/Os/: CMakeLists.txt  ConditionVariable.cpp  ConditionVariable.hpp  Console.cpp  Console.hpp  DefaultConsole.cpp  DefaultMutex.cpp  DefaultQueue.cpp  DefaultRawTime.cpp  DefaultTask.cpp  Mutex.cpp  Mutex.hpp  Queue.cpp  Queue.hpp  RawTime.cpp  RawTime.hpp  Task.cpp  Task.hpp  error.cpp  error.hpp
Zephyr/Svc/ZephyrTime/: CMakeLists.txt  ZephyrTime.cpp  ZephyrTime.hpp
Zephyr/ZephyrTime/: CMakeLists.txt  ZephyrTime.cpp  ZephyrTime.fpp  ZephyrTime.hpp  ZephyrTimeImpl.cpp  ZephyrTimeImpl.hpp
ci/: pyproject.toml
ci/docker/: Dockerfile
ci/docker/scripts/: install-zephyr-sdk
ci/sample-configs/: pico2.yml  teensy41.yml
ci/src/fprime_zephyr/plugins/: zephyr_ci.py
ci/tests/allocator/: README.md  run_allocator_smoke.sh  verify_allocator_change.sh
ci/tests/allocator/include/Fw/: FPrimeBasicTypes.hpp
ci/tests/allocator/include/Fw/Types/: Assert.hpp  MemAllocator.hpp
ci/tests/allocator/include/zephyr/: kernel.h
ci/tests/allocator/src/: memory_allocator_smoke.cpp
cmake/platform/: FprimeZephyr.hpp  Zephyr.cmake
cmake/platform/types/: PlatformTypes.h
cmake/platform/zephyr/Platform/: CMakeLists.txt  PlatformTypes.fpp  PlatformTypes.h
cmake/toolchain/: zephyr.cmake
default/zephyr-config/: CMakeLists.txt  LoRaCfg.hpp  MemoryAllocation.hpp
fprime-zephyr/Drv/: CMakeLists.txt
fprime-zephyr/Drv/LoRa/: CMakeLists.txt  LoRa.cpp  LoRa.fpp  LoRa.hpp
fprime-zephyr/Drv/LoRa/docs/: sdd.md
fprime-zephyr/Drv/ZephyrGpioDriver/: ZephyrGpioDriver.cpp  ZephyrGpioDriver.fpp  ZephyrGpioDriver.hpp
fprime-zephyr/Drv/ZephyrI2CDriver/: CMakeLists.txt  ZephyrI2CDriver.cpp  ZephyrI2CDriver.fpp  ZephyrI2CDriver.hpp
fprime-zephyr/Drv/ZephyrI2CDriver/docs/: sdd.md
fprime-zephyr/Drv/ZephyrI2cDriver/: CMakeLists.txt  ZephyrI2cDriver.cpp  ZephyrI2cDriver.fpp  ZephyrI2cDriver.hpp
fprime-zephyr/Drv/ZephyrRateDriver/: CMakeLists.txt  ZephyrRateDriver.cpp  ZephyrRateDriver.fpp  ZephyrRateDriver.hpp
fprime-zephyr/Drv/ZephyrSpiDriver/: CMakeLists.txt  ZephyrSpiDriver.cpp  ZephyrSpiDriver.fpp  ZephyrSpiDriver.hpp
fprime-zephyr/Drv/ZephyrUartDriver/: ZephyrUartDriver.cpp  ZephyrUartDriver.fpp  ZephyrUartDriver.hpp
fprime-zephyr/Os/: CMakeLists.txt  ConditionVariable.cpp  ConditionVariable.hpp  Console.cpp  Console.hpp  DefaultConsole.cpp  DefaultFile.cpp  DefaultMutex.cpp  DefaultRawTime.cpp  DefaultTask.cpp  Directory.cpp  Directory.hpp  File.cpp  File.hpp  FileSystem.cpp  FileSystem.hpp  IntervalTimer.cpp  KmallocAllocator.cpp  KmallocAllocator.hpp  LogPrintk.cpp  Mutex.cpp  Mutex.hpp  Queue.cpp  RawTime.cpp  RawTime.hpp  StdAtomic.cpp  Task.cpp  Task.hpp  snprintk.cpp
fprime-zephyr/Svc/: CMakeLists.txt
fprime-zephyr/Svc/FatalHandler/: CMakeLists.txt  FatalHandler.cpp  FatalHandler.fpp  FatalHandler.hpp
fprime-zephyr/Svc/ZephyrTime/: CMakeLists.txt  ZephyrTime.cpp  ZephyrTime.fpp  ZephyrTime.hpp
fprime-zephyr/Svc/ZephyrTime/docs/: sdd.md
sample-config/: prj.conf  west.yml
sample-config/_dot_west/: config
sample-config/boards/: rpi_pico2_rp2350a_m33.overlay
sample-configs/: teensy41.yml
src/fprime_zephyr/plugins/: zephyr_ci.py
